--- a/versioning.util/src/org/netbeans/modules/versioning/util/VcsAdvancedOptionsPanel.form
+++ b/versioning.util/src/org/netbeans/modules/versioning/util/VcsAdvancedOptionsPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.4" maxVersion="1.4" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
@@ -91,7 +91,7 @@
     </Component>
     <Container class="javax.swing.JPanel" name="containerPanel">
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignCardLayout"/>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
     </Container>
   </SubComponents>
 </Form>
