--- a/maven.j2ee/src/org/netbeans/modules/maven/j2ee/newproject/EELevelPanelVisual.form
+++ b/maven.j2ee/src/org/netbeans/modules/maven/j2ee/newproject/EELevelPanelVisual.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.5" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <AuxValues>
@@ -24,7 +24,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Component id="serverModel" pref="117" max="32767" attributes="0"/>
+                      <Component id="serverModel" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="addButton" min="-2" max="-2" attributes="0"/>
                   </Group>
@@ -41,7 +41,7 @@
           <Group type="102" alignment="0" attributes="0">
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="serverModel" alignment="3" min="-2" pref="22" max="-2" attributes="0"/>
+                  <Component id="serverModel" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="addButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
