--- a/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/JavaHintDataPanel.form
+++ b/apisupport.wizards/src/org/netbeans/modules/apisupport/project/ui/wizard/javahint/JavaHintDataPanel.form
@@ -91,6 +91,7 @@
         <Component class="javax.swing.JTextArea" name="description">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="lineWrap" type="boolean" value="true"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
         </Component>
