--- a/autoupdate.ui/src/org/netbeans/modules/autoupdate/ui/ProblemPanel.form
+++ b/autoupdate.ui/src/org/netbeans/modules/autoupdate/ui/ProblemPanel.form
@@ -25,7 +25,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="spTitle" alignment="0" pref="347" max="32767" attributes="0"/>
+          <Component id="spTitle" alignment="0" max="32767" attributes="0"/>
           <Component id="spMessage" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
