--- a/php.project/src/org/netbeans/modules/php/project/connections/sync/ProgressPanel.form
+++ b/php.project/src/org/netbeans/modules/php/project/connections/sync/ProgressPanel.form
@@ -45,7 +45,7 @@
               <Component id="progressPanelHolder" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" max="-2" attributes="0"/>
               <Component id="progressMessagePanelHolder" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
